# rasterizer-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md
crapcraft/: Cargo.toml
crapcraft/src/: crapcraft.rs  main.rs
crapcraft/src/crapcraft/: block.rs  chunk.rs  shaders.rs
model_viewer/: .gitignore  Cargo.toml
model_viewer/src/: main.rs  model.rs  obj.rs  ppm.rs  shaders.rs  texture.rs
model_viewer/src/scene/: camera.rs  diablo3.rs  mod.rs  pbr.rs
model_viewer/src/shader/: diablo3.rs  flat.rs  mod.rs  normal.rs  pbr.rs  weird.rs
models/diablo3/: diablo3_pose_diffuse.tga  diablo3_pose_nm_tangent.tga  readme.txt
rasterizer/: Cargo.toml
rasterizer-macros/: Cargo.toml
rasterizer-macros/src/: lib.rs
rasterizer/src/: lib.rs  rasterizer.rs
rasterizer/src/rasterizer/: bounding_box.rs  framebuffer.rs  point.rs  shader.rs
src/: main.rs  obj.rs  rasterizer.rs
src/rasterizer/: bounding_box.rs  framebuffer.rs  frametime.rs  model.rs  point.rs  shader.rs  vertex_data.rs
