[package]
name = "crapcraft"
version = "0.1.0"
authors = ["diogo <diogo464@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasterizer = { path = "../rasterizer" }
sdl2 = "0.34"
image = "0.23"
rand = "0.7"
nalgebra-glm = "0.8.0"