[package]
name = "model_viewer"
version = "0.1.0"
authors = ["diogo <diogo464@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasterizer = { path = "../rasterizer" }
sdl2 = "0.34.5"
image = "0.23.14"
itertools = "0.10.1"
glam = "0.17.3"
