[package]
name = "rasterizer"
version = "0.1.0"
authors = ["diogo <diogo464@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.17.3"
itertools = "0.10.1"
rand = "0.8.4"
rayon = "1.5.1"
rasterizer-macros = { path = "../rasterizer-macros" }
crossbeam = "0.8.1"
